--- a/styles/utils.css
+++ b/styles/utils.css
@@ -9,7 +9,11 @@
   --secondary-light:#054ab1; */
 
   --white: #ffffff;
-  --black: black;
+  --white1:#f5f5f6;
+  --black: #000000;
+  --black1:rgba(0,0,0,.2);
+  --blackl1:rgba(255,255,255,.5);
+  --blackl2:rgba(0,0,0,.1);
   --grey:#CCC;
   --grey1: hsla(0,0%,100%,.8);
   --greyLight-1: #e4ebf5;
