--- a/styles/index.css
+++ b/styles/index.css
@@ -1,10 +1,4 @@
-body{
-    font-size:1.4rem ;
-}
-
 .header{
-    display: flex;
-    align-items: center;
     background-color: var(--primary-dark);
     color: var(--white);
     position: fixed;
@@ -14,12 +8,8 @@ body{
     height: 8rem;
 }
 
-a{
-    text-decoration: none;
-}
-
-.header a,.carousel a{
-    color: var(--white);
+.logo-head{
+    margin-right:3rem ; 
 }
 
 .logo-img{
@@ -27,69 +17,64 @@ a{
     height: 9rem;
 }
 
-.logo-head{
-    display: flex;
-    align-items: center;
-    margin-right:3rem ; 
-}
-
 .logo-name{
     font-size: 1.6rem;
     font-weight: 900;
 }
+
 .logo-name:hover{
-    font-size: 1.6rem;
     color:var(--shine-green-dark)
 
 }
 
+.header a,.carousel a{
+    color: var(--white);
+}
+
 .catLinks-head ul{
-    display: flex;
     text-decoration:none;
     list-style: none;
 }
 
 .cat-item .cat-link{
     position: relative;
-    display: inline-block;
     font-weight: 550;
     font-size: 1.4rem;
-    padding: 2.5rem 2rem 2.9rem;
+    padding: 2.5rem 2rem 2.9rem;     /* top horizontal bottom*/
 }
 
-.cat-item .cat-link:hover::after{
+.cat-link:hover::after{
     content: "";
     position: absolute;
     top: 100%;
     left: 0;
-    border-bottom: 2.19px solid var(--white);
+    border-bottom: 2px solid var(--white);
     width: 100%;
 }
 
 .cat-link:hover{
-    font-weight: bold;
+    font-weight: bold; 
 }
 
 .search-head{
-    display:inline-block;
     width: 40%;
-    margin: 2rem 2rem 2rem 4rem;
+    margin: 2rem 2rem 2rem 5rem;
     position: relative;
-    background-color: #f5f5f6;
+    background-color: var(--white1);
 }
 
 .search-input{
     cursor: text;
     border: none;
-    width: 97%;
     outline:none;
+    width: 97%;
     box-sizing: content-box;
     padding: 0.8rem 1rem;
     border-radius: 0 0.4rem 0.4rem 0;
-    font-size: inherit;
+    font-size: 1.6rem;
     height: 2rem;
-    background: #f5f5f6;
-    border: 1px solid #f5f5f6;
+    background:var(--white1);
+    border: 1px solid var(--white1);
    
 }
 
@@ -97,27 +82,21 @@ a{
     box-sizing: content-box;
     text-align: center;
     height: 2rem;
-    padding: 0.63rem 0 0.97rem 0;
+    padding: 0.65rem 0 0.95rem 0.4rem;
     width: 2.8rem;
-    background: #f5f5f6;
+    background:var(--white1);
+    border: 1px solid var(--white1);
     color: var(--greySearch);
     position: absolute;
     left: -3rem;
     border-radius: 0.4rem 0 0 0.4rem;
-    border: 1px solid #f5f5f6;
 }
 
 .actions-head{
-    display: flex;
-    align-items: center;
     margin-left:auto ;
-   
 }
 
-.flex-col{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.user,.wishlist,.bag{
     padding-right: 2rem;
 }
 
@@ -128,13 +107,6 @@ a{
     height: 800px;
     object-fit: cover;
     object-position: center;
-}
-
-button{
-    border: none;
-    background: none;
-    outline: none;
-    cursor: pointer;
 }
 
 .carousel{
@@ -166,20 +138,19 @@ button{
     font-size: 4rem;
     top: 50%;
     transform: translateY(-50%);
-    color: rgba(255,255,255,.5);
+    color: var(--blackl1);
     padding: 0.5rem;
-    background-color: rgba(0,0,0,.1);
+    background-color: var(--blackl2);
 }
 
 .carousel button span:hover,
 .carousel button span:focus{
-    color: white;
-    background-color: rgba(0,0,0,.2);
+    color: var(--white);
+    background-color: var(--black1);
 }
 
 button .next-icon{
-    right: 1rem;
-    
+    right: 1rem;  
 }
 
 button .before-icon{
@@ -203,7 +174,6 @@ button .before-icon{
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
-    /* text-align: center; */
     color: var(--white);
 }
 
