--- a/styles/utils.css
+++ b/styles/utils.css
@@ -4,7 +4,7 @@
   font-size: 62.5%;
   --primary-light: #8abdff;
   --primary: #6d5dfc;
-  --primary-dark: #5b0eeb;
+  --primary-purple: #5b0eeb;
   /* --secondary:#394fe2;
   --secondary-light:#054ab1; */
 
