footer style refactor

--- a/styles/utils.css
+++ b/styles/utils.css
@@ -41,6 +41,10 @@
   --dull-pink:#ffaca2;
   --dull-pink:#ebb4ae;
 
+  --tomatoOrange:rgb(255,99,71);
+  --coralOrange:rgb(255,127,80);
+  --yellowGold:rgb(255,215,0);
+
 
   --pink1:#dbdcd7;
 	--pink2:#dddcd7;
