--- a/pages/products-cat-racing.css
+++ b/pages/products-cat-racing.css
@@ -248,8 +248,9 @@ a{
 
 .changePage{
     padding: 1rem;
-    margin-top: 2rem;
+    margin: 2rem 0 1rem 0;
     gap: 1rem;
+
 }
 
 .page-index{
@@ -267,7 +268,7 @@ a{
 .footer{
     padding: 4rem 0 4rem 0;
     background-color: var(--pink8bg);
-    color:var(--pink4);
+    color:var(--yellowGold);
     font-weight: 600;
     font-size: 2rem;
     padding-right:2rem ;
