style:product listing style changes

--- a/styles/utils.css
+++ b/styles/utils.css
@@ -54,6 +54,7 @@
   --pink6:#801357;
   --pink7:#3d1635;
   --pink8:#1c1a27;
-  --pink8bg:rgb(19 16 30 / 94%);
+  --pink8bg:#13101ef0;
   --gold1:#e0cb8f;
+  --dullgold:#574f3b;
 }
