--- a/styles/utils.css
+++ b/styles/utils.css
@@ -41,6 +41,10 @@
   --dull-pink:#ffaca2;
   --dull-pink:#ebb4ae;
 
+  --tomatoOrange:rgb(255,99,71);
+  --coralOrange:rgb(255,127,80);
+  --yellowGold:rgb(255,215,0);
+
 
   --pink1:#dbdcd7;
 	--pink2:#dddcd7;
@@ -50,6 +54,10 @@
   --pink6:#801357;
   --pink7:#3d1635;
   --pink8:#1c1a27;
+  --pink8bg:#13101ef0;
+
 
   --gold1:#e0cb8f;
+  --dullgold:#574f3b;
+
 }
