--- a/pages/compStyles/buttons.css
+++ b/pages/compStyles/buttons.css
@@ -1,3 +1,5 @@
+/* hover-color-slide-button-start */
+
 .btn-slide{
     border: none;
     width: 40rem;
@@ -39,3 +41,5 @@
 .sp-t{
     margin: 2rem 4rem 0;
 }
+
+/* hover-color-slide-button-end */
