--- a/styles/utils.css
+++ b/styles/utils.css
@@ -2,9 +2,9 @@
 :root {
   font-family: 'Poppins', sans-serif;
   font-size: 62.5%;
-  --primary-light: #8abdff;
-  --primary: #6d5dfc;
-  --primary-dark: #5b0eeb;
+  --blue-light: #8abdff;
+  --primary-light: #6d5dfc;
+  --purple: #5b0eeb;
   /* --secondary:#394fe2;
   --secondary-light:#054ab1; */
 
@@ -59,5 +59,11 @@
 
   --gold1:#e0cb8f;
   --dullgold:#574f3b;
+
+
+  --box-shadow-primary-out:5px 5px 12px #120f1d,
+    -1px -1px 12px #141120;
+  --box-shadow-primary-in: inset -50px 50px 100px #0b0a10,
+    inset 50px -50px 100px #2d2a3e;
 
 }
