--- a/pages/product-listing/products-cat-racing.css
+++ b/pages/product-listing/products-cat-racing.css
@@ -137,6 +137,7 @@ input{
 
 .footer{
     padding: 4rem 0 4rem 0;
+    margin: 0;
     background-color: var(--pink8bg);
     color:var(--yellowGold);
     font-weight: 600;
