--- a/styles/spaces.css
+++ b/styles/spaces.css
@@ -22,7 +22,7 @@
     --margin-bottom-2rem:2rem;
     --margin-bottom-3rem:3rem;
     --margin-bottom-4rem:4rem;
-    --margin-top-1rem:1rem;
+    --margin-top-1rem:1rem 0 0 0;
     --margin-top-2rem:2rem;
     --margin-top-3rem:3rem;
     --margin-top-4rem:4rem;
@@ -38,6 +38,11 @@
     --spacer:0.125rem;
     --spacer2:0.50rem;
     --spacer0:0;
+    --margin-left-auto:0 0 0 auto;
+}
+
+.sp-mg-lauto{
+    margin: var(--margin-left-auto);
 }
 
 .sp3-pd-tb{padding: var(--padding-tobo-3rem);}
