--- a/styles/index.css
+++ b/styles/index.css
@@ -23,7 +23,7 @@
 }
 
 .logo-name:hover{
-    color:var(--shine-green-dark)
+    color:var(--tomatoOrange)
 
 }
 
@@ -75,7 +75,6 @@
     height: 2rem;
     background:var(--white1);
     border: 1px solid var(--white1);
-   
 }
 
 .search-submit span{
