fix:links fixed

--- a/pages/sign-up/signup.css
+++ b/pages/sign-up/signup.css
@@ -5,15 +5,14 @@
 .rows3-grid{
     display: grid;
     height: 100vh;
-    /* grid-gap: 2rem; */
     grid-template-rows: 8rem 1fr 8rem;
     grid-template-areas:
-        "row-grid1 "
+        "row-grid1"
         "row-grid2"
         "row-grid3";  
 }
 
-header {
+.header {
     grid-area: row-grid1;
     color: var(--white);
     background-color:var(--pink8bg);
@@ -132,19 +131,4 @@ footer {
     cursor: pointer;
 }
 
-.footer{
-    padding: 4rem 0 4rem 0;
-    background-color: var(--pink8bg);
-    color:var(--yellowGold);
-    font-weight: 600;
-    font-size: 2rem;
-    align-items: center;
-    padding-right:2rem ;
-    border-top: 1px solid var(--blackl1);
-}
-
-.git-icon{
-    color:var(--yellowGold);
-    padding-left:2rem;
-}
 
