--- a/styles/utils.css
+++ b/styles/utils.css
@@ -55,7 +55,7 @@
   --pink7:#3d1635;
   --pink8:#1c1a27;
   --pink8bg:#13101ef0;
-  --gold1:#e0cb8f;
+  --gold1:rgb(224, 203, 143);
   --dullgold:#574f3b;
 
   --box-shadow-primary-out:5px 5px 12px #120f1d,
