--- a/pages/cart/cart.css
+++ b/pages/cart/cart.css
@@ -165,3 +165,15 @@
     text-transform: uppercase;
 }
 
+.down-btn{
+    font-size: 1rem;
+    font-weight: 800;
+    cursor: pointer;
+    margin: 0;
+    color: var(--gold1);
+    font-weight: 600;
+}
+
+.btn-round{
+    background-color: var(--gold1);
+}
